MenuItemController updated - added fetch all items